; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/infiniband/hw/ipath/extr_ipath_eeprom.c_i2c_startcmd.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/infiniband/hw/ipath/extr_ipath_eeprom.c_i2c_startcmd.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ipath_devdata = type { i32 }

@i2c_line_high = common dso_local global i32 0, align 4
@i2c_line_low = common dso_local global i32 0, align 4
@VERBOSE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [26 x i8] c"No ack to complete start\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.ipath_devdata*, i32)* @i2c_startcmd to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @i2c_startcmd(%struct.ipath_devdata* %0, i32 %1) #0 {
  %3 = alloca %struct.ipath_devdata*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store %struct.ipath_devdata* %0, %struct.ipath_devdata** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.ipath_devdata*, %struct.ipath_devdata** %3, align 8
  %7 = load i32, i32* @i2c_line_high, align 4
  %8 = call i32 @sda_out(%struct.ipath_devdata* %6, i32 %7)
  %9 = load %struct.ipath_devdata*, %struct.ipath_devdata** %3, align 8
  %10 = load i32, i32* @i2c_line_high, align 4
  %11 = call i32 @scl_out(%struct.ipath_devdata* %9, i32 %10)
  %12 = load %struct.ipath_devdata*, %struct.ipath_devdata** %3, align 8
  %13 = load i32, i32* @i2c_line_low, align 4
  %14 = call i32 @sda_out(%struct.ipath_devdata* %12, i32 %13)
  %15 = load %struct.ipath_devdata*, %struct.ipath_devdata** %3, align 8
  %16 = load i32, i32* @i2c_line_low, align 4
  %17 = call i32 @scl_out(%struct.ipath_devdata* %15, i32 %16)
  %18 = load %struct.ipath_devdata*, %struct.ipath_devdata** %3, align 8
  %19 = load i32, i32* %4, align 4
  %20 = call i32 @wr_byte(%struct.ipath_devdata* %18, i32 %19)
  store i32 %20, i32* %5, align 4
  %21 = load i32, i32* %5, align 4
  %22 = icmp ne i32 %21, 0
  br i1 %22, label %23, label %26

23:                                               ; preds = %2
  %24 = load i32, i32* @VERBOSE, align 4
  %25 = call i32 @ipath_cdbg(i32 %24, i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str, i64 0, i64 0))
  br label %26

26:                                               ; preds = %23, %2
  %27 = load i32, i32* %5, align 4
  ret i32 %27
}

declare dso_local i32 @sda_out(%struct.ipath_devdata*, i32) #1

declare dso_local i32 @scl_out(%struct.ipath_devdata*, i32) #1

declare dso_local i32 @wr_byte(%struct.ipath_devdata*, i32) #1

declare dso_local i32 @ipath_cdbg(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
